<resources>
    <string name="app_name">Mobile Ordering Demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnContinue">Continue</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="select_meal_option">Select meal option</string>
    <string name="ala_carte">Ala Carte</string>
    <string name="php_price">Php. %.2f</string>
    <string name="usd_price">$ %.2f</string>
    <string name="select">SELECT</string>
    <string name="select_something">Select %s</string>
    <string name="price_delta">+%.2f</string>
    <string name="none_selected">None Selected</string>
    <string name="meal_options">Meal options</string>
    <string name="select_item_to_modify">Select item to modify</string>
    <string name="total">TOTAL:</string>
    <string name="tax">Tax:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="empty_bag_title">Your bag is empty.</string>
    <string name="empty_bag_subtitle">Looks like you haven’t made your choice yet.</string>
    <string name="bag_summary_toolbar_title">Bag</string>
    <string name="menu_toolbar_title">Menu</string>
    <string name="update_item">UPDATE ITEM\n$%s</string>
    <string name="add_to_bag">ADD TO BAG - $%s</string>
    <string name="add_item_to_bag">Add to bag</string>
    <string name="update_item_in_bag">Update item</string>
    <string name="quantity">QUANTITY</string>
    <string name="cancel_changes_dialog_message">Are you sure you want to discard your selections?</string>
    <string name="cta_yes">YES</string>
    <string name="cta_no">NO</string>
    <string name="subtitle_required">Required (Max : %d)</string>
    <string name="subtitle_optional">Optional (Max : %d)</string>
    <string name="launch_menu"><i>Launch</i> <u>Menu</u></string>
    <string name="ok_cta">OK</string>
    <string name="order_created_message">Your order is created.</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="later_cta">Later</string>
    <string name="try_again_cta">Try again</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title">Mobile Ordering Demo</string>
    <string name="submit">Submit</string>
    <string name="log_in_failed">Log in failed.</string>
    <string name="password_empty">Your password cannot be empty.</string>
    <string name="username_empty">Your username cannot be empty.</string>
    <string name="username_password_empty">Your username and password cannot be empty.</string>
    <string name="loading">Loading...</string>
    <string name="signing_in">Signing in...</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_home">Home</string>
    <string name="nav_bag">Bag</string>
    <string name="menu_orders">Orders</string>
    <string name="order_id">Order ID</string>
    <string name="date_and_time">Date and Time</string>
    <string name="view_order">VIEW ORDER</string>
    <string name="total_price">Total Price</string>
    <string name="cta_set">SET</string>
    <string name="enter_customer_name_message">Please enter the customer name.</string>
    <string name="remove">REMOVE</string>
    <string name="remove_sentence_case">Remove</string>
    <string name="item_updated_snackbar">Item is updated successfully.</string>
    <string name="item_added_snackbar">Item is added successfully.</string>
    <string name="item_removed_snackbar">Item is removed successfully.</string>
    <string name="error_add_item">There\'s an error adding the item</string>
    <string name="error_modify_item">There\'s an error modifying the item</string>
    <string name="error_remove_item">There\'s an error removing the item</string>
    <string name="checkout_successful">You\'re order was checked out successfully.</string>
    <string name="checkout_failure">We\'re having trouble checking out your order. Please try again later.</string>
    <string name="order_details">Order Details</string>
    <string name="error_loading_order_history_message">We can\'t load your order history. Please try again later.</string>
    <string name="error_loading_order_history_title">Oh, snap!</string>
    <string name="retrieving_order_history">Retrieving order history…</string>
    <string name="fetching_bag">Fetching bag…</string>
    <string name="adding_to_bag">Adding to bag…</string>
    <string name="updating_item">Updating item…</string>
    <string name="us_not_you">It\'s not you, it\' us.</string>
    <string name="error_fetching_bag">We have issues fetching your bag.\nPlease try again.</string>
    <string name="error_loading_menu_title">Oh, snap!</string>
    <string name="error_loading_menu_message">We can\'t load the menu at the moment. Please try again later.</string>
    <string name="fetching_menu">Fetching menu…</string>
    <string name="loading_item">Loading item…</string>
    <string name="fetching_order">Fetching order…</string>
    <string name="checkout">CHECKOUT</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="name">Name</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="confirm_cancel">Are you sure you want to cancel this order?</string>
    <string name="cancelling_order">Cancelling your order…</string>
    <string name="error_cancelling_order">There\'s an error cancelling your order. Please try again.</string>
    <string name="order_cancelled">Your order is cancelled.</string>
    <string name="you_have_cancelled_this_order">You have cancelled this order.</string>
    <string name="current_order_message">This order is currently in your bag.</string>
    <string name="cancellable_order">Your order is not yet confirmed and is eligible for cancellation.</string>
    <string name="preparing_order">The restaurant is preparing your order.</string>
    <string name="delivering_order">Our driver is on the way to deliver your order.</string>
    <string name="delivered">This order has been delivered.</string>
    <string name="ready_for_pickup">Your order is ready for pickup. Skip the line and go directly to our pickup counter.</string>
    <string name="picked_up">This order has been picked up.</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="name_hint_text">Name</string>
    <string name="delivery_address_hint_text">Delivery address</string>
    <string name="delivery_address_error">Delivery address is required.</string>
    <string name="customer_name_error">Customer name is required.</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="error_not_found">Items in your bag are invalidated. We cleared your bag for you.</string>
    <string name="remove_selected">Remove selected</string>
    <string name="cancel">Cancel</string>
    <string name="removing_loading">Removing items from bag…</string>
    <string name="removing_item_success">We removed your item/s successfully!</string>
    <string name="removing_item_fail">Oops! We can\'t seem to remove these items. Please try again later.</string>
    <string name="you_re_ordering_at">You\'re ordering at:</string>
    <string name="select_restaurant">Select restaurant</string>
    <string name="no_restaurant">No restaurant selected</string>
    <string name="no_restaurant_message">Select a restaurant to view the menu.</string>
    <string name="empty"></string>
    <string name="order_history_empty">Order history is empty</string>
    <string name="order_history_empty_message">As you create an order, it will be listed here.</string>
    <string name="changing_venue_message">Changing the selected restaurant will clear your items in your bag. Are you sure you want to proceed?</string>
    <string name="removing_from_bag">Removing from bag…</string>
    <string name="your_bag_from">Your bag from:</string>
    <string name="items">Items</string>
    <string name="summary">Summary</string>
    <string name="total_bag">Total</string>
    <string name="pickup_from">Pickup from:</string>
    <string name="view_cart">VIEW CART</string>
    <string name="clear_cart">The cart already contains order from %s. Would you like to clear your cart to add this item?</string>
    <string name="restaurants">Restaurants</string>
    <string name="see_all">See all</string>
    <string name="delivery_address">Enter delivery address</string>
    <string name="address">Address</string>
    <string name="save">SAVE</string>
    <string name="delivering_to">Delivering to:</string>
    <string name="set_delivery_address">Set delivery address</string>
    <string name="delivery_to">Delivery to:</string>
    <string name="change_address">Change address</string>
    <string name="come_back_later">Come back later!</string>
    <string name="this_restaurant_hasn_t_added_a_menu_yet">This restaurant hasn\'t added a menu yet.</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="directions">Directions</string>
    <string name="error_while_loading_restaurants">Error while loading restaurants</string>
    <string name="retry">Retry</string>
    <string name="there_s_an_error_loading_the_menu">There\'s an error loading the menu.</string>
    <string name="loading_menu">Loading menu…</string>
    <string name="view_store">View store</string>
    <string name="placing_order">Placing order…</string>
</resources>
