<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_header"
            style="@style/BlackHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/delivery_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_delivery_address"
            style="@style/OutlinedEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:theme="@style/OutlinedEditTextTheme"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/textColorBlack"
            app:layout_constraintEnd_toEndOf="@+id/tv_header"
            app:layout_constraintStart_toStartOf="@+id/tv_header"
            app:layout_constraintTop_toBottomOf="@id/tv_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:singleLine="true"
                android:textColorHighlight="@color/textColorBlack" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/freesansbold"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/layout_delivery_address"
            app:layout_constraintStart_toStartOf="@+id/layout_delivery_address"
            app:layout_constraintTop_toBottomOf="@id/layout_delivery_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>