<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ryanjames.swabergersmobilepos.feature.old.bagsummary.BagSummaryViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgWhite"
        android:clipChildren="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgWhite"
            android:stateListAnimator="@animator/app_bar">

            <include
                layout="@layout/toolbar_bag_activity"
                app:storeName="@{viewModel.selectedVenue.name}" />


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgWhite"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".feature.bagsummary.BagSummaryActivity">


                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/topBtnsBottomBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="btnRemoveItems, btnRemoveSelected, btnCancelRemove" />


                <Button
                    android:id="@+id/btnRemoveItems"
                    style="@style/BagSummaryTopBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onClickRemove()}"
                    android:text="@string/remove_sentence_case"
                    app:layout_constraintEnd_toEndOf="@+id/bgCard"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnRemoveSelected"
                    style="@style/BagSummaryTopBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:enabled="@{viewModel.removeSelectedBtnEnabled}"
                    android:onClick="@{() -> viewModel.onClickRemoveSelected()}"
                    android:text="@string/remove_selected"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnCancelRemove"
                    style="@style/BagSummaryTopBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{() -> viewModel.onClickCancelRemove()}"
                    android:text="@string/cancel"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="@+id/bgCard"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/bgCard"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintBottom_toBottomOf="@id/rv_items"
                    app:layout_constraintEnd_toEndOf="@id/rv_items"
                    app:layout_constraintStart_toStartOf="@id/rv_items"
                    app:layout_constraintTop_toTopOf="@id/topBtnsBottomBarrier" />

                <TextView
                    android:id="@+id/tv_items_header"
                    style="@style/TextViewHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:elevation="20dp"
                    android:text="@string/select_item_to_modify"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/bgCard" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_items"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:elevation="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_items_header" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/removeModeVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.removeModeVisibility}"
                    app:constraint_referenced_ids="btnRemoveSelected, btnCancelRemove" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/viewModeVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.viewModeVisibility}"
                    app:constraint_referenced_ids="btnRemoveItems" />


                <include
                    android:id="@+id/layout_delivery_pickup"
                    layout="@layout/view_delivery_pickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_items"
                    app:viewModel="@{viewModel}" />


                <include
                    android:id="@+id/layout_summary"
                    layout="@layout/view_bag_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_delivery_pickup"
                    app:subtotal="@{viewModel.subtotal}"
                    app:tax="@{viewModel.tax}"
                    app:total="@{viewModel.total}" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/bg_accent_button"
                    android:fontFamily="@font/freesansbold"
                    android:onClick="@{() -> viewModel.onClickPlaceOrder()}"
                    android:text="@string/place_order"
                    android:textColor="@color/colorWhite"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_summary" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>